KubernetesDeployment/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stream-processing
  labels:
    istio-injection: enabled
