KubernetesDeployment/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: billing-service
  namespace: stream-processing
  labels:
    app: billing

spec:
  type: ClusterIP
  selector:
    app: billing
  ports:
    - port: 80
      targetPort: 8080
      name: http
      protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: stream-processing
  labels:
    app: order

spec:
  type: ClusterIP
  selector:
    app: order
  ports:
    - port: 80
      targetPort: 8080
      name: http
      protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: stream-processing
  labels:
    app: notification

spec:
  type: ClusterIP
  selector:
    app: notification
  ports:
    - port: 80
      targetPort: 8080
      name: http
      protocol: TCP
