KubernetesDeployment/gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: stream-processing-gateway
  namespace: stream-processing

spec:
  selector:
    app: istio-ingress

  servers:
    - port:
        targetPort: 8080
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "arch.homework"
